# BitsParser

./: .gitignore  BitsParser.py  pyproject.toml
bitsparser/: bitsparser.py
bitsparser/ese/: ese.py
ese/: ese.py
